// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Breadcrumbs Breadcrumbs 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  color: currentColor;
  min-width: 24px;
}

.c4 {
  color: #00438f;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:hover {
  cursor: pointer;
  color: #002b5c;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #434d59;
}

.c3 a:visited {
  color: #00438f;
}

.c5 {
  margin: 0;
  padding: 0;
  list-style: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #434d59;
  padding-left: 8px;
  padding-right: 8px;
}

.c5 a:visited {
  color: #00438f;
}

.c2 {
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <nav
      className="Box-sc-1qu1edy-0 c1"
    >
      <ol
        className="c2"
      >
        <li
          className="c3"
        >
          <a
            className="c4"
            color="darkBlue"
            fontSize="medium"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden={true}
          className="c5 seperator"
        >
          <svg
            aria-hidden={true}
            className="c6"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="24px"
            icon="rightArrow"
            size="24px"
            title={null}
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          className="c3"
        >
          <a
            className="c4"
            color="darkBlue"
            fontSize="medium"
            href="/Tenants"
          >
            Tenants
          </a>
        </li>
        <li
          aria-hidden={true}
          className="c5 seperator"
        >
          <svg
            aria-hidden={true}
            className="c6"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="24px"
            icon="rightArrow"
            size="24px"
            title={null}
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
      </ol>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Breadcrumbs without link 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  color: currentColor;
  min-width: 24px;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: #00438f;
}

.c4 {
  color: #00438f;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:hover {
  cursor: pointer;
  color: #002b5c;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #434d59;
}

.c3 a:visited {
  color: #00438f;
}

.c5 {
  margin: 0;
  padding: 0;
  list-style: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #434d59;
  padding-left: 8px;
  padding-right: 8px;
}

.c5 a:visited {
  color: #00438f;
}

.c2 {
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <nav
      className="Box-sc-1qu1edy-0 c1"
    >
      <ol
        className="c2"
      >
        <li
          className="c3"
        >
          <a
            className="c4"
            color="darkBlue"
            fontSize="medium"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden={true}
          className="c5 seperator"
        >
          <svg
            aria-hidden={true}
            className="c6"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="24px"
            icon="rightArrow"
            size="24px"
            title={null}
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          className="c3"
        >
          <a
            className="c4"
            color="darkBlue"
            fontSize="medium"
            href="/Tenants"
          >
            Tenants
          </a>
        </li>
        <li
          aria-hidden={true}
          className="c5 seperator"
        >
          <svg
            aria-hidden={true}
            className="c6"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="24px"
            icon="rightArrow"
            size="24px"
            title={null}
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          className="c3"
        >
          <p
            className="c7"
            color="darkBlue"
            disabled={false}
            fontSize="medium"
          >
            Current Tenant
          </p>
        </li>
        <li
          aria-hidden={true}
          className="c5 seperator"
        >
          <svg
            aria-hidden={true}
            className="c6"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="24px"
            icon="rightArrow"
            size="24px"
            title={null}
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
      </ol>
    </nav>
  </div>
</div>
`;
